Fix button alignment

--- a/styles/index.css
+++ b/styles/index.css
@@ -28,7 +28,7 @@ section div {
 
 .outer-grid {
     display: grid;
-    grid-template-columns: 1fr 2fr;
+    grid-template-columns: 1.2fr 2fr;
     justify-content: center;
     justify-content: space-between;
     margin-left: 25px;
@@ -49,6 +49,7 @@ section div {
     justify-content: center;
     align-items: center;
     border: none;
+    margin
 }
 
 #realTimeTemp {
@@ -61,16 +62,17 @@ section div {
     background-color: rgb(79, 112, 156);
     color: white;
     border-radius: 5%;
-    height:30px;
-    width:210px;
+    height: 30px;
+    width: 210px;
 }
 
 .celsius {
     display: grid;
-    grid-template-columns: 2fr 1fr;
+    grid-template-columns: 1fr 1fr;
     border: none;
     column-gap: 5px;
-    margin: 3px;
+    height: 30px;
+    width: 210px;
     transition: .15;
 }
 
@@ -79,6 +81,7 @@ section div {
     padding-left: 20px;
     color: rgb(92, 137, 132);
     font-size: larger;
+    background-color: transparent;
 }
 
 #output1 {
@@ -92,7 +95,7 @@ section div {
 .temperature {
     padding-top: 30px;
     border: none;
-    padding-left: 30px;
+    padding-left: 10px;
 }
 
 #degrees {
@@ -149,8 +152,8 @@ section div {
     border-radius: 35;
     background-color: rgb(242, 216, 216);
     font-family: monospace;
-    height:30px;
-    width:210px;
+    height: 30px;
+    width: 210px;
 }
 
 #defaultCity {
@@ -163,6 +166,6 @@ section div {
     background-color: rgb(79, 112, 156);
     color: white;
     border-radius: 5%;
-    height:30px;
-    width:145px
+    height: 30px;
+    width: 145px
 }
